bk_ida/gobmkida/c2/store_delta_territory_cache
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2097:7: error: conflicting types for 'store_delta_territory_cache'
void  store_delta_territory_cache( int pos, int color, float a3, float move_value, float followup_value) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/liberty.h:648:6: note: previous declaration is here
void store_delta_territory_cache(int pos, int color, float move_value,
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2121:12: error: expected expression
*( _OWORD *)( i + 10642852) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2121:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642852) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2121:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642852) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2122:12: error: expected expression
*( _OWORD *)( i + 10642868) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2122:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642868) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2122:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642868) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2123:12: error: expected expression
*( _OWORD *)( i + 10642884) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2123:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642884) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2123:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642884) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2124:12: error: expected expression
*( _OWORD *)( i + 10642900) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2124:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642900) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2124:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642900) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2125:12: error: expected expression
*( _OWORD *)( i + 10642916) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2125:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642916) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2125:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642916) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2126:12: error: expected expression
*( _OWORD *)( i + 10642932) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2126:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642932) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2126:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642932) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2129:12: error: expected expression
*( _OWORD *)( i + 10642948) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2129:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642948) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2129:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642948) = xmmword_495F80; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2130:12: error: expected expression
*( _OWORD *)( i + 10642964) = xmmword_495F80; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2130:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 10642964) = xmmword_495F80; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/engine/influence.c:2130:31: error: use of undeclared identifier 'xmmword_495F80'
*( _OWORD *)( i + 10642964) = xmmword_495F80; 
                              ^
25 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/store_delta_territory_cache/src/obj/1/influence.o] Error 1
